<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Saldo Ya!</string>
    <string name="action_settings">Acerca de</string>
    <string name="titulo_tarjetas">Mis Tarjetas</string>
    <string name="texto_ultima_transaccion">"Última transacción: "</string>
    <string name="texto_nueva_tarjeta">Nueva Tarjeta </string>
    <string name="menu_consulta">Consulta</string>
    <string name="menu_tarjetas">Tarjetas</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_eliminar">Eliminar tarjeta</string>
    <string name="btn_recargar">Recargar</string>
    <string name="content_description_image">Imagen</string>
    <string name="content_description_splash">Logotipo de Peluche</string>
    <string name="buscar">Consultar Saldo</string>
    <string name="nombreT">Nombre de Tarjeta</string>
    <string name="numeroT">Número de Tarjeta</string>
    <string name="mensaje">Su saldo actual es de: B/.%1$s \nSu último movimiento fue el %2$s</string>
    <string name="title_activity_about">Sobre nosotros&#8230;</string>
    <string name="tarjeta_eliminada">"Tarjeta eliminada"</string>
	<string name="msg_progress_1">Por favor espere&#8230;</string>
	<string name="msg_progress_2">"Consultando saldo"</string>
	<string name="tarjeta_almacenada">"Tarjeta Almacenada"</string>
	<string name="numero_invalido">"Número de Tarjeta Invalido. Vuelva a intentar."</string>
	<string name="saldo_disponible">"Saldo disponible"</string>
	<string name="ingrese_num_tarjeta">"Ingrese un número de tarjeta"</string>
	<string name="time_out">"Tiempo de espera agotado"</string>
	<string name="sin_conexion">"No se puede conectar con el servidor"</string>
	<string name="acerca_de_version_number">Versión 1.02</string>
	<string name="acerca_de_derechos">"&#169; 2013 -2014 Artixworks®\n Derechos Reservados"</string>
	<string name="consultando">Consultando saldo&#8230;</string>
	<string name="info_actualizada">Los datos han sido actualizados</string>
</resources>
