<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/backgroung_repeat"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".AcercaDeActivity" >
	    		
		<ImageView
		    android:id="@+id/logo_inc"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:contentDescription="@string/app_name"
		    android:gravity="center"
		    android:scaleType="fitEnd"
		    android:src="@drawable/logo_splash4" />
		
		<TextView
	        android:id="@+id/textViewSoftName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/app_name" />
		
		
		<TextView
	        android:id="@+id/textViewSoftVersion"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/acerca_de_version_number" />
		
		<TextView
	        android:id="@+id/textViewDerechos"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/acerca_de_derechos" />
	
	</LinearLayout>
</ScrollView>
